CMake - compile options pedantic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4362,5 +4362,71 @@ endif()
 ##### Fix Objective C builds #####
 string(APPEND CMAKE_OBJC_FLAGS " ${CMAKE_C_FLAGS}")
 
+##### Pedantic build #####
+if(CMAKE_C_COMPILER_ID STREQUAL "Clang" OR CMAKE_C_COMPILER_ID STREQUAL "GNU")
+  if(CMAKE_C_COMPILER_ID STREQUAL "Clang")
+    string(APPEND CMAKE_C_FLAGS " -Weverything")
+    string(APPEND CMAKE_C_FLAGS " -Wno-c23-extensions")
+    string(APPEND CMAKE_C_FLAGS " -Wno-gnu-zero-variadic-macro-arguments")
+    string(APPEND CMAKE_C_FLAGS " -Wno-assign-enum")
+    string(APPEND CMAKE_C_FLAGS " -Wno-used-but-marked-unused")
+    string(APPEND CMAKE_C_FLAGS " -Wno-string-conversion")
+    string(APPEND CMAKE_C_FLAGS " -Wno-cast-function-type-strict")
+    string(APPEND CMAKE_C_FLAGS " -Wno-implicit-int-float-conversion")
+    string(APPEND CMAKE_C_FLAGS " -Wno-implicit-int-conversion")
+    string(APPEND CMAKE_C_FLAGS " -Wno-atomic-implicit-seq-cst")
+    string(APPEND CMAKE_C_FLAGS " -Wno-covered-switch-default")
+    string(APPEND CMAKE_C_FLAGS " -Wno-four-char-constants")
+    string(APPEND CMAKE_C_FLAGS " -Wno-comma")
+    string(APPEND CMAKE_C_FLAGS " -Wno-disabled-macro-expansion")
+    string(APPEND CMAKE_C_FLAGS " -Wno-pre-c11-compat")
+    string(APPEND CMAKE_C_FLAGS " -Wno-format-non-iso")
+    string(APPEND CMAKE_C_FLAGS " -Wno-reserved-macro-identifier")
+    string(APPEND CMAKE_C_FLAGS " -Wno-reserved-identifier")
+    string(APPEND CMAKE_C_FLAGS " -Wno-unsafe-buffer-usage")
+    string(APPEND CMAKE_C_FLAGS " -Wno-missing-prototypes")
+    string(APPEND CMAKE_C_FLAGS " -Wno-tautological-value-range-compare")
+    if(CMAKE_C_COMPILER_VERSION VERSION_GREATER_EQUAL 21)
+      string(APPEND CMAKE_C_FLAGS " -Wno-c++-keyword")
+      string(APPEND CMAKE_C_FLAGS " -Wno-implicit-int-enum-cast")
+      string(APPEND CMAKE_C_FLAGS " -Wno-implicit-void-ptr-cast")
+      string(APPEND CMAKE_C_FLAGS " -Wno-nrvo")
+      string(APPEND CMAKE_C_FLAGS " -Wno-jump-misses-init")
+      string(APPEND CMAKE_C_FLAGS " -Wno-jump-misses-init")
+    endif()
+  else()
+      string(APPEND CMAKE_C_FLAGS " -Wall -Wextra -Wpedantic")
+  endif()
+  string(APPEND CMAKE_C_FLAGS " -Wno-padded")
+  string(APPEND CMAKE_C_FLAGS " -Wno-missing-variable-declarations")
+
+  string(APPEND CMAKE_C_FLAGS " -Wno-sign-compare")
+  string(APPEND CMAKE_C_FLAGS " -Wno-sign-conversion")
+  string(APPEND CMAKE_C_FLAGS " -Wno-double-promotion")
+
+  string(APPEND CMAKE_C_FLAGS " -Wno-switch-default")
+  string(APPEND CMAKE_C_FLAGS " -Wno-switch-enum")
+
+  string(APPEND CMAKE_C_FLAGS " -Wno-declaration-after-statement")
+  string(APPEND CMAKE_C_FLAGS " -Wno-format-nonliteral")
+  string(APPEND CMAKE_C_FLAGS " -Wno-float-equal")
+  string(APPEND CMAKE_C_FLAGS " -Wno-bad-function-cast")
+  string(APPEND CMAKE_C_FLAGS " -Wno-cast-align")
+  string(APPEND CMAKE_C_FLAGS " -Wno-cast-qual")
+  string(APPEND CMAKE_C_FLAGS " -Wno-alloca")
+  string(APPEND CMAKE_C_FLAGS " -Wno-unused-macros")
+  string(APPEND CMAKE_C_FLAGS " -Wno-unused-parameter")
+  string(APPEND CMAKE_C_FLAGS " -Wno-unused-variable")
+  string(APPEND CMAKE_C_FLAGS " -Wno-unused-but-set-variable")
+  string(APPEND CMAKE_C_FLAGS " -Wno-unused-function")
+  string(APPEND CMAKE_C_FLAGS " -Wno-missing-field-initializers")
+  string(APPEND CMAKE_C_FLAGS " -Wno-vla")
+  string(APPEND CMAKE_C_FLAGS " -Wno-type-limits")
+  # string(APPEND CMAKE_C_FLAGS " -Wno-unguarded-availability-new") # MacOS
+elseif(MSVC)
+  string(APPEND CMAKE_C_FLAGS " /Wall")
+  string(APPEND CMAKE_C_FLAGS " /wd5045 /wd4548 /wd4710 /wd4242 /wd4018 /wd4191 /wd4711")
+endif()
+
 SDL_PrintSummary()
 debug_show_sdl_deps()
